--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Create a contest{% endblock %}
+{% block title %}Contest manager{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -14,10 +14,11 @@
                 <div class="text-center pb-3">
                     <h2>Existing contests</h2>
                 </div>
-                <div class="row">
+                <div class="row list-container overflow-auto">
                     <ul class="list-group col-12">
-                        <li class="list-group-item list-group-item-dark p-1 pl-2 mb-2">
-                            <p class="mb-0 existing_challenge pb-1">Title of the first contest</p>
+                        {% for contest in contests|reverse %}
+                        <li class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2">
+                            <p class="mb-0 existing_challenge pb-1"><i class="fa fa-flag"></i> {{ contest.name }}</p>
                             <div class="row col-12">
                                 <a class="btn btn btn-dark text-white mr-4 mt-1 p-1 pl-2 pr-2" href="#">Edit</a>
                                 <div class="custom-control custom-switch mt-2 mr-4">
@@ -30,100 +31,73 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="list-group-item list-group-item-dark p-1 pl-2 mb-2">
-                            <p class="mb-0 existing_challenge pb-1">Title of the second contest</p>
-                            <div class="row col-12">
-                                <a class="btn btn btn-dark text-white mr-4 mt-1 p-1 pl-2 pr-2" href="#">Edit</a>
-                                <div class="custom-control custom-switch mt-2 mr-4">
-                                    <input type="checkbox" class="custom-control-input" id="isActive" name="isActive">
-                                    <label class="custom-control-label" for="isActive">Active</label>
-                                </div>
-                                <div class="custom-control custom-switch mt-2">
-                                    <input type="checkbox" class="custom-control-input" id="display" name="display">
-                                    <label class="custom-control-label" for="display">Display</label>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item list-group-item-dark p-1 pl-2 mb-2">
-                            <p class="mb-0 existing_challenge pb-1">Title of the third contest</p>
-                            <div class="row col-12">
-                                <a class="btn btn btn-dark text-white mr-4 mt-1 p-1 pl-2 pr-2" href="#">Edit</a>
-                                <div class="custom-control custom-switch mt-2 mr-4">
-                                    <input type="checkbox" class="custom-control-input" id="isActive" name="isActive">
-                                    <label class="custom-control-label" for="isActive">Active</label>
-                                </div>
-                                <div class="custom-control custom-switch mt-2">
-                                    <input type="checkbox" class="custom-control-input" id="display" name="display">
-                                    <label class="custom-control-label" for="display">Display</label>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item list-group-item-dark p-1 pl-2 mb-2">
-                            <p class="mb-0 existing_challenge pb-1">Title of the fourth contest</p>
-                            <div class="row col-12">
-                                <a class="btn btn btn-dark text-white mr-4 mt-1 p-1 pl-2 pr-2" href="#">Edit</a>
-                                <div class="custom-control custom-switch mt-2 mr-4">
-                                    <input type="checkbox" class="custom-control-input" id="isActive" name="isActive">
-                                    <label class="custom-control-label" for="isActive">Active</label>
-                                </div>
-                                <div class="custom-control custom-switch mt-2">
-                                    <input type="checkbox" class="custom-control-input" id="display" name="display">
-                                    <label class="custom-control-label" for="display">Display</label>
-                                </div>
-                            </div>
-                        </li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
             <div class="col-4 offset-2">
-                <div class="row">
-                    <form action="/Admin/insertContest" method="post">
-                        <div class="row d-flex justify-content-center">
-                            <div class="text-center pb-3">
-                                <h2>Create a contest</h2>
-                            </div>
+                <form action="/Admin/insertContest" method="post">
+                    <div class="row d-flex justify-content-center">
+                        <div class="text-center pb-3">
+                            <h2>Create a contest</h2>
                         </div>
-                        <div class="row d-flex justify-content-center">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon1">Title</span>
-                                </div>
-                                <input type="text" class="form-control" placeholder="Contest title" aria-label="Username" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1">Title</span>
                             </div>
+                            <input type="text" class="form-control" placeholder="Contest title" aria-describedby="basic-addon1" name="name">
                         </div>
-                        <div class="row d-flex justify-content-center">
-                            <div class="input-group mb-3">
-                                    {% include 'Components/_select_campus.html.twig' %}
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <label class="input-group-text" for="campus" id="inputGroup-campus">Campus</label>
                             </div>
+                            <select class="custom-select" id="campus" name="campus">
+                                <option value="all" selected>All campuses</option>
+                                {% for campus in campuses %}
+                                    <option value="{{ campus.id }}" {% if user.campus == campus.id %} selected {% endif %}> {{ campus.city }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
-                        <div class="row d-flex justify-content-center">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">Description</span>
-                                </div>
-                                <textarea class="form-control" aria-label="Description" maxlength="200" placeholder="Max 200 characters"></textarea>
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Description</span>
                             </div>
+                            <textarea class="form-control" aria-label="Description" maxlength="200" placeholder="Between 30 and 200 characters" name="description"></textarea>
                         </div>
-                        <div class="row d-flex justify-content-center">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon1">Duration</span>
-                                </div>
-                                <input type="number" class="form-control" placeholder="Contest duration in hours" aria-label="Username" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1">Duration</span>
                             </div>
+                            <input type="number" class="form-control" placeholder="Contest duration in hours" aria-describedby="basic-addon1" name="duration">
                         </div>
-                        <div class="row d-flex justify-content-center">
-                            <div class="form-group">
-                                <button type="submit" name="createFullContest" class="align-self-center btn btn-dark text-white">Next step (add some challenges) <i class="fa fa-arrow-right"></i></button>
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1">Image</span>
                             </div>
+                            <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image">
                         </div>
-                        <div class="row d-flex justify-content-center">
-                            <div class="form-group">
-                                <button type="submit" name="createBlankContest" class="align-self-center btn btn-dark text-white">Create a blank contest <i class="fa fa-save"></i></button>
-                            </div>
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div class="form-group">
+                            <button type="submit" name="createFullContest" class="align-self-center btn btn-dark text-white">Next step (add challenges) <i class="fa fa-arrow-right"></i></button>
                         </div>
-                    </form>
-                </div>
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div class="form-group">
+                            <button type="submit" name="createBlankContest" class="align-self-center btn btn-dark text-white">Create a blank contest <i class="fa fa-save"></i></button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
